--- a/racers.html
+++ b/racers.html
@@ -24,7 +24,7 @@
     </nav>
   </div>
 
-  <div class="card-deck">
+  <div class="card-deck racers">
     <div class="card">
       <img class="card-img-top" src="img/racers/mario.png" alt="Mario">
       <div class="card-body">
@@ -106,7 +106,7 @@
       </div>
     </div>
   </div>
-  <div class="card-deck">
+  <div class="card-deck racers">
     <div class="card">
       <img class="card-img-top" src="img/racers/dk.png" alt="Donkey Kong">
       <div class="card-body">
@@ -201,7 +201,7 @@
     </div>
   </div>
 
-  <div class="card-deck">
+  <div class="card-deck racers">
     <div class="card">
       <img class="card-img-top" src="img/racers/birdo.png" alt="Birdo">
       <div class="card-body">
