--- a/games.html
+++ b/games.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="css/min/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Mario Kart</title>
 </head>
 
-<body class="body">
+<body>
   <div class="navbar">
     <div class="logo">
       <img src="img/logo.png" alt="MarioKart">
