--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./css/min/main.css">
-
   <title>Mario Kart</title>
 </head>
 
-<body class="body">
+<body>
   <div class="navbar">
     <div class="logo">
       <img src="img/logo.png" alt="MarioKart">
