--- a/tracks.html
+++ b/tracks.html
@@ -11,7 +11,7 @@
   <title>Mario Kart</title>
 </head>
 
-<body class="body">
+<body>
   <div class="navbar">
     <div class="logo">
       <img src="img/logo.png" alt="MarioKart">
