--- a/games.html
+++ b/games.html
@@ -18,10 +18,10 @@
       <img src="img/logo.png" alt="MarioKart">
     </div>
     <nav class="nav">
-      <div class="menu-item"><a href="index.html">Home</a></div>
-      <div class="menu-item active">Games</div>
+      <div class="menu-item"><a href="index.html" class="texty">Home</a></div>
+      <div class="menu-item active" class="texty">Games</div>
       <div class="menu-item">Tracks</div>
-      <div class="menu-item"><a href="racers.html">Racers</a></div>
+      <div class="menu-item"><a href="racers.html" class="texty">Racers</a></div>
     </nav>
   </div>
 
