--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </div>
     <nav class="nav">
       <div class="menu-item active">Home</div>
-      <div class="menu-item"><a href="games.html">Games</a></div>
-      <div class="menu-item">Tracks</div>
-      <div class="menu-item"><a href="racers.html">Racers</a></div>
+      <div class="menu-item"><a href="games.html" class="texty">Games</a></div>
+      <div class="menu-item" class="texty">Tracks</div>
+      <div class="menu-item"><a href="racers.html" class="texty">Racers</a></div>
     </nav>
   </div>
 
@@ -58,7 +58,7 @@
       <img class="card-img-top" src="img/cheat.jpg" alt="Cheats">
       <div class="card-body">
         <h5 class="card-title">Cheats</h5>
-        <p class="card-text">Find out all the exclusive cheats for each Mario Kart game. Includes cheats never before
+        <p>Find out all the exclusive cheats for each Mario Kart game. Includes cheats never before
           released.</p>
       </div>
     </div>
@@ -66,52 +66,42 @@
       <img class="card-img-top" src="img/unlock.jpg" alt="Unlock">
       <div class="card-body">
         <h5 class="card-title">Unlockables</h5>
-        <p class="card-text">Get all the unlockables in each game. Unlock your favourite racers and vehichles with
-          bonus skins.</p>
+        <ul><b>Courses & Cups ==</b></ul>
+
+        <li>Star Cup Earn trophies in the Mushroom and Flower Cups (same for all CCs)</li>
+        <li>Leaf Cup Earn trophies in the Shell and Banana Cups (same for all CCs)</li>
+        <li>Lightning Cup Earn a trophy in Leaf Cup (same for all CCs)</li>
+        <li>Special Cup Earn a trophy in Star Cup (same for all CCs)</li>
+        <li>Mirror Class Win all 150cc cups</li>
+        <br>
+        <ul><b>Characters ==</b></ul>
+
+        <li>King Boo Win the 50cc Star Cup</li>
+        <li>Diddy Kong Win the 50cc Lightning Cup</li>
+        <li>Baby Daisy Earn at least a 1-star rank in all 50cc Wii Grand Prix cups</li>
+        <li>Dry Bones Win the 100cc Leaf Cup</li>
+        <li>Bowser Jr. Attain at least a 1-star rank in all 100cc Retro Grand Prix Cups</li>
+        <li>Daisy Win 150cc Special Cup</li>
+        <li>Dry Bowser Attain at least a 1-star rank in all 150cc Wii Grand Prix cups</li>
+        <li>Birdo Beat 250 people online\Unlock 16 fast staff ghosts</li>
       </div>
     </div>
-    <div class="card">
-      <img class="card-img-top" src="img/history.jpg" alt="History">
+    <div class="card content">
+      <img class="card-img-top" src="img/news.jpg" alt="News">
       <div class="card-body">
-        <h5 class="card-title">History</h5>
-        <p class="card-text">Mario Kart related
-          January 31, 2018: Nintendo announces Mario Kart Tour, a mobile smartphone installment to the series!
-          July 14, 2017: Mario Kart Arcade GP VR is released in Japan for the Arcade.
-          April 28, 2017: Mario Kart 8 Deluxe is released for the Nintendo Switch.
-          January 12, 2017: Nintendo announces Mario Kart 8 Deluxe coming on April 28th.
-          April 1, 2015: Nintendo announces Mario Kart 8 DLC Pack 2 coming on April 23rd.
-          November 5, 2014: Nintendo announces Mario Kart 8 DLC Park 1 coming on November 13th.
-          May 30, 2014: Mario Kart 8 is released for the Wii U.
-          April 30, 2014: A new trailer for Mario Kart 8 was shown, displaying the remaining courses as well as two new
-          characters.
-          April 3, 2014: Several new courses were shown in a trailer for Mario Kart 8.
-
-          Wiki-related
-          March 5, 2018: HammerBro101 is promoted to staff.
-          March 5, 2018: Due to inactivity, PrincessPeach789 and Cheetos8089 are demoted from staff.
-          February 16, 2018: The Manual of Style has finally been completed!
-          December 3 2017: Cheetos8089 is repromoted to staff.
-          November 17, 2017: BananasAreAnnoying is promoted to staff.
-          October 30, 2017: Due to disruptive behaviour, BM44 is back from the dead is demoted from staff.
-          September 06, 2017: Due to lack of interest, Cheetos8089 is demoted from staff.
-          July 15, 2017: Cheetos8089 is promoted to staff.
-          July 09, 2017: BM44 is back from the dead is promoted to staff.
-          May 09, 2017: Tomodachidude45678 is promoted to staff.
-          April 14, 2017: The RPG Gamer is promoted to staff.
-          October 2, 2016: Klap Trap is promoted to staff.
-          October 10, 2015: Due to months of inactivity, Cooldude101167 is demoted.
-          August 18, 2015: Due to lack of interest, Lumoshi is self-demoted.
-          April 24, 2015: Due to months of inactivity, Wintermelon43 and Timson622222 are demoted.
-          April 22, 2015: PrincessPeach789 is promoted to staff.
-          April 22, 2015: Due to months of inactivity, LuigiTheYoshi11 is demoted.
-          July 14, 2014: LuigiTheYoshi11 is promoted to staff.
-          July 13, 2014: Cooldude101167 is promoted to staff.
-          June 29, 2013: Timson622222 is promoted to staff.
-          May 27, 2013: Lumoshi is promoted to staff.
-          January 3, 2013: Wintermelon43 is promoted to staff.
-          November 8, 2007: The Mario Kart Racing Wiki is founded by Nsxdriven.
-
-          Is a page you're looking for not here? You can help by creati</p>
+        <h5 class="card-title">News & Updates</h5>
+        <li>January 31, 2018: Nintendo announces Mario Kart Tour, a mobile smartphone installment to
+          the series!</li>
+        <li>July 14, 2017: Mario Kart Arcade GP VR is released in Japan for the Arcade.</li>
+        <li>April 28, 2017: Mario Kart 8 Deluxe is released for the Nintendo Switch.</li>
+        <li>January 12, 2017: Nintendo announces Mario Kart 8 Deluxe coming on April 28th.</li>
+        <li>April 1, 2015: Nintendo announces Mario Kart 8 DLC Pack 2 coming on April 23rd.</li>
+        <li>November 5, 2014: Nintendo announces Mario Kart 8 DLC Park 1 coming on November 13th.</li>
+        <li>May 30, 2014: Mario Kart 8 is released for the Wii U.</li>
+        <li>April 30, 2014: A new trailer for Mario Kart 8 was shown, displaying the remaining courses as well as two
+          new
+          characters.</li>
+        <li>April 3, 2014: Several new courses were shown in a trailer for Mario Kart 8.</li>
       </div>
     </div>
   </div>
