--- a/racers.html
+++ b/racers.html
@@ -17,16 +17,16 @@
       <img src="img/logo.png" alt="MarioKart">
     </div>
     <nav class="nav">
-      <div class="menu-item"><a href="index.html">Home</a></div>
-      <div class="menu-item"><a href="games.html">Games</a></div>
-      <div class="menu-item">Tracks</div>
+      <div class="menu-item"><a href="index.html" class="texty">Home</a></div>
+      <div class="menu-item"><a href="games.html" class="texty">Games</a></div>
+      <div class="menu-item">Tracks class="texty"</div>
       <div class="menu-item active">Racers</div>
     </nav>
   </div>
 
-  <div class="card-deck racers">
+  <div class="card-deck">
     <div class="card">
-      <img class="card-img-top" src="img/racers/mario.png" alt="Mario">
+      <img class="card-img-top racers" src="img/racers/mario.png" alt="Mario">
       <div class="card-body">
         <h5 class="card-title">Mario</h5>
         <p class="card-text">Mario is an Italian and the main protagonist of the series who was introduced in 1981.</p>
@@ -36,15 +36,18 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/luigi.png" alt="Luigi">
+      <img class="card-img-top racers" src="img/racers/luigi.png" alt="Luigi">
       <div class="card-body">
         <h5 class="card-title">Luigi</h5>
         <p class="card-text">Luigi is Mario's younger, but taller fraternal twin
           brother who is also Italian. He is the official 'Player 2' of the series.</p>
       </div>
+      <div class="card-footer">
+        <small class="text-muted">Weight Class: Medium</small>
+      </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/peach.png" alt="Peach">
+      <img class="card-img-top racers" src="img/racers/peach.png" alt="Peach">
       <div class="card-body">
         <h5 class="card-title">Princess Peach</h5>
         <p class="card-text">Princess Peach formerly known as Princess Toadstool, although always known as Peach in
@@ -55,7 +58,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/daisy.png" alt="Daisy">
+      <img class="card-img-top racers" src="img/racers/daisy.png" alt="Daisy">
       <div class="card-body">
         <h5 class="card-title">Princess Daisy</h5>
         <p class="card-text">Princess Daisy is the princess of the region of Sarasaland. It is often speculated that
@@ -66,7 +69,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/toad.png" alt="Toad">
+      <img class="card-img-top racers" src="img/racers/toad.png" alt="Toad">
       <div class="card-body">
         <h5 class="card-title">Toad</h5>
         <p class="card-text">Toad is a mushroom-like humanoid character.</p>
@@ -76,7 +79,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/toadette.png" alt="Toadette">
+      <img class="card-img-top racers" src="img/racers/toadette.png" alt="Toadette">
       <div class="card-body">
         <h5 class="card-title">Toadette</h5>
         <p class="card-text">Toadette is Toad's female counterpart and is a mushroom-like girl.</p>
@@ -86,7 +89,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/yoshi.png" alt="Yoshi">
+      <img class="card-img-top racers" src="img/racers/yoshi.png" alt="Yoshi">
       <div class="card-body">
         <h5 class="card-title">Yoshi</h5>
         <p class="card-text">Yoshi, once romanized as Yossy, is an anthropomorphic dinosaur.</p>
@@ -96,7 +99,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/rosalina.png" alt="Rosalina">
+      <img class="card-img-top racers" src="img/racers/rosalina.png" alt="Rosalina">
       <div class="card-body">
         <h5 class="card-title">Rosalina</h5>
         <p class="card-text">Rosalina is the adoptive mother of the Lumas and also the watcher of the cosmos.</p>
@@ -106,9 +109,9 @@
       </div>
     </div>
   </div>
-  <div class="card-deck racers">
+  <div class="card-deck">
     <div class="card">
-      <img class="card-img-top" src="img/racers/dk.png" alt="Donkey Kong">
+      <img class="card-img-top racers" src="img/racers/dk.png" alt="Donkey Kong">
       <div class="card-body">
         <h5 class="card-title">Donkey Kong</h5>
         <p class="card-text">Donkey Kong is an anthropomorphic gorilla and the main protagonist of the franchise with
@@ -119,7 +122,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/diddy.png" alt="Diddy Kong">
+      <img class="card-img-top racers" src="img/racers/diddy.png" alt="Diddy Kong">
       <div class="card-body">
         <h5 class="card-title">Diddy Kong</h5>
         <p class="card-text">Diddy Kong is Donkey Kong's nephew and has appeared in two Mario Kart games so far.</p>
@@ -129,7 +132,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/wario.png" alt="Wario">
+      <img class="card-img-top racers" src="img/racers/wario.png" alt="Wario">
       <div class="card-body">
         <h5 class="card-title">Wario</h5>
         <p class="card-text">Wario is a fictional character in Nintendo's Mario series who was originally designed as
@@ -140,7 +143,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/waluigi.png" alt="Waluigi">
+      <img class="card-img-top racers" src="img/racers/waluigi.png" alt="Waluigi">
       <div class="card-body">
         <h5 class="card-title">Waluigi</h5>
         <p class="card-text">Waluigi is a fictional character in the Mario franchise. He is Wario's partner and
@@ -152,7 +155,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/bowser.png" alt="Bowser">
+      <img class="card-img-top racers" src="img/racers/bowser.png" alt="Bowser">
       <div class="card-body">
         <h5 class="card-title">Bowser</h5>
         <p class="card-text">Bowser or King Koopa is the leader and most powerful of the turtle-like Koopa race, and
@@ -166,7 +169,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/koopa.png" alt="Koopa">
+      <img class="card-img-top racers" src="img/racers/koopa.png" alt="Koopa">
       <div class="card-body">
         <h5 class="card-title">Koopa Troopa</h5>
         <p class="card-text">Koopa Troopa is one of Bowser's allies who tries to stop Mario in his quest to save
@@ -177,7 +180,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/lakitu.png" alt="Lakitu">
+      <img class="card-img-top racers" src="img/racers/lakitu.png" alt="Lakitu">
       <div class="card-body">
         <h5 class="card-title">Lakitu</h5>
         <p class="card-text">Lakitu is a Koopa who floats in a cloud. That cloud is really the only thing that sets
@@ -189,7 +192,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/shy.png" alt="Shy Guy">
+      <img class="card-img-top racers" src="img/racers/shy.png" alt="Shy Guy">
       <div class="card-body">
         <h5 class="card-title">Shy Guy</h5>
         <p class="card-text">Shy Guy stares out from behind his mask, his gaze revealing the hidden weaknesses of his
@@ -201,9 +204,9 @@
     </div>
   </div>
 
-  <div class="card-deck racers">
+  <div class="card-deck">
     <div class="card">
-      <img class="card-img-top" src="img/racers/birdo.png" alt="Birdo">
+      <img class="card-img-top racers" src="img/racers/birdo.png" alt="Birdo">
       <div class="card-body">
         <h5 class="card-title">Birdo</h5>
         <p class="card-text">Birdo is a pink, anthropomorphic creature who wears a red hairbow, and has a round mouth
@@ -214,7 +217,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/iggy.png" alt="Iggy">
+      <img class="card-img-top racers" src="img/racers/iggy.png" alt="Iggy">
       <div class="card-body">
         <h5 class="card-title">Iggy Koopa</h5>
         <p class="card-text">Iggy Koopa is a hyperactive, demented, and unpredictable Koopaling who wields the yellow
@@ -225,7 +228,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/larry.png" alt="Larry">
+      <img class="card-img-top racers" src="img/racers/larry.png" alt="Larry">
       <div class="card-body">
         <h5 class="card-title">Larry Koopa</h5>
         <p class="card-text">Larry Koopa is the youngest Koopaling who is often seen at the forefront of the
@@ -236,7 +239,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/lemmy.png" alt="Lemmy">
+      <img class="card-img-top racers" src="img/racers/lemmy.png" alt="Lemmy">
       <div class="card-body">
         <h5 class="card-title">Lemmy Koopa</h5>
         <p class="card-text">Lemmy Koopa is depicted as a small, fun-loving child who wields the green magic wand,
@@ -248,7 +251,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/ludwig.png" alt="Ludwig">
+      <img class="card-img-top racers" src="img/racers/ludwig.png" alt="Ludwig">
       <div class="card-body">
         <h5 class="card-title">Ludwig von Koopa</h5>
         <p class="card-text">Ludwig von Koopa is the eldest who possesses a magnificent intelligence most likely
@@ -260,7 +263,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/morton.png" alt="Morton">
+      <img class="card-img-top racers" src="img/racers/morton.png" alt="Morton">
       <div class="card-body">
         <h5 class="card-title">Morton Koopa Jr.</h5>
         <p class="card-text">Morton Koopa Jr. is the only Koopaling to have a brown skin tone and is often depicted
@@ -272,7 +275,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/roy.png" alt="Roy">
+      <img class="card-img-top racers" src="img/racers/roy.png" alt="Roy">
       <div class="card-body">
         <h5 class="card-title">Roy Koopa</h5>
         <p class="card-text">Roy Koopa's head and sunglasses are pink (as was his shell originally), likely in
@@ -284,7 +287,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="img/racers/wendy.png" alt="Wendy">
+      <img class="card-img-top racers" src="img/racers/wendy.png" alt="Wendy">
       <div class="card-body">
         <h5 class="card-title">Wendy O. Koopa</h5>
         <p class="card-text">Wendy O. Koopa is the only female Koopaling, and she wields the purple magic wand. She
