--- a/tracks.html
+++ b/tracks.html
@@ -17,10 +17,10 @@
       <img src="img/logo.png" alt="MarioKart">
     </div>
     <nav class="nav">
-      <div class="menu-item">Home</div>
-      <div class="menu-item">Games</div>
+      <div class="menu-item">Home class="texty"</div>
+      <div class="menu-item">Games class="texty"</div>
       <div class="menu-item active">Tracks</div>
-      <div class="menu-item">Racers</div>
+      <div class="menu-item">Racers class="texty"</div>
     </nav>
   </div>
 
