--- a/racers.html
+++ b/racers.html
@@ -19,7 +19,7 @@
     <nav class="nav">
       <div class="menu-item"><a href="index.html" class="texty">Home</a></div>
       <div class="menu-item"><a href="games.html" class="texty">Games</a></div>
-      <div class="menu-item">Tracks class="texty"</div>
+      <div class="menu-item" class="texty">Tracks</div>
       <div class="menu-item active">Racers</div>
     </nav>
   </div>
