--- a/games.html
+++ b/games.html
@@ -20,7 +20,7 @@
     <nav class="nav">
       <div class="menu-item"><a href="index.html" class="texty">Home</a></div>
       <div class="menu-item active" class="texty">Games</div>
-      <div class="menu-item">Tracks</div>
+      <div class="menu-item"><a href="history.html" class="texty">History</a></div>
       <div class="menu-item"><a href="racers.html" class="texty">Racers</a></div>
     </nav>
   </div>
