--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="nav">
       <div class="menu-item active">Home</div>
       <div class="menu-item"><a href="games.html" class="texty">Games</a></div>
-      <div class="menu-item" class="texty">Tracks</div>
+      <div class="menu-item"><a href="history.html" class="texty">History</a></div>
       <div class="menu-item"><a href="racers.html" class="texty">Racers</a></div>
     </nav>
   </div>
