--- a/racers.html
+++ b/racers.html
@@ -19,12 +19,12 @@
     <nav class="nav">
       <div class="menu-item"><a href="index.html" class="texty">Home</a></div>
       <div class="menu-item"><a href="games.html" class="texty">Games</a></div>
-      <div class="menu-item" class="texty">Tracks</div>
+      <div class="menu-item"><a href="history.html" class="texty">History</a></div>
       <div class="menu-item active">Racers</div>
     </nav>
   </div>
 
-  <div class="card-deck">
+  <div class="card-deck flex-wrap">
     <div class="card">
       <img class="card-img-top racers" src="img/racers/mario.png" alt="Mario">
       <div class="card-body">
@@ -68,7 +68,7 @@
         <small class="text-muted">Weight Class: Medium</small>
       </div>
     </div>
-    <div class="card">
+    <!--<div class="card">
       <img class="card-img-top racers" src="img/racers/toad.png" alt="Toad">
       <div class="card-body">
         <h5 class="card-title">Toad</h5>
@@ -108,159 +108,160 @@
         <small class="text-muted">Weight Class: Heavy</small>
       </div>
     </div>
-  </div>
-  <div class="card-deck">
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/dk.png" alt="Donkey Kong">
-      <div class="card-body">
-        <h5 class="card-title">Donkey Kong</h5>
-        <p class="card-text">Donkey Kong is an anthropomorphic gorilla and the main protagonist of the franchise with
-          the same name appearing in the Donkey Kong and Mario video game franchises.</p>
+  </div>-->
+    <div class="card-deck" flex-wrap>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/dk.png" alt="Donkey Kong">
+        <div class="card-body">
+          <h5 class="card-title">Donkey Kong</h5>
+          <p class="card-text">Donkey Kong is an anthropomorphic gorilla and the main protagonist of the franchise with
+            the same name appearing in the Donkey Kong and Mario video game franchises.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Heavy</small>
+        </div>
       </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Heavy</small>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/diddy.png" alt="Diddy Kong">
+        <div class="card-body">
+          <h5 class="card-title">Diddy Kong</h5>
+          <p class="card-text">Diddy Kong is Donkey Kong's nephew and has appeared in two Mario Kart games so far.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Medium</small>
+        </div>
       </div>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/wario.png" alt="Wario">
+        <div class="card-body">
+          <h5 class="card-title">Wario</h5>
+          <p class="card-text">Wario is a fictional character in Nintendo's Mario series who was originally designed as
+            an arch-rival of Mario and the protagonist of the Wario series of games.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Heavy</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/waluigi.png" alt="Waluigi">
+        <div class="card-body">
+          <h5 class="card-title">Waluigi</h5>
+          <p class="card-text">Waluigi is a fictional character in the Mario franchise. He is Wario's partner and
+            Luigi's
+            arch-rival.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Heavy</small>
+        </div>
+      </div>
+      <!--
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/bowser.png" alt="Bowser">
+        <div class="card-body">
+          <h5 class="card-title">Bowser</h5>
+          <p class="card-text">Bowser or King Koopa is the leader and most powerful of the turtle-like Koopa race, and
+            has been the archenemy of Mario ever since his first appearance, in the game Super Mario Bros. He is the
+            main
+            antagonist of the series, his main goal being to kidnap Princess Peach to take control of the Mushroom
+            Kingdom.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Heavy</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/koopa.png" alt="Koopa">
+        <div class="card-body">
+          <h5 class="card-title">Koopa Troopa</h5>
+          <p class="card-text">Koopa Troopa is one of Bowser's allies who tries to stop Mario in his quest to save
+            Princess Peach. However, some Koopas aid Mario on his quest.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Light</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/lakitu.png" alt="Lakitu">
+        <div class="card-body">
+          <h5 class="card-title">Lakitu</h5>
+          <p class="card-text">Lakitu is a Koopa who floats in a cloud. That cloud is really the only thing that sets
+            him
+            apart from a normal Koopa Troopa.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Light</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/shy.png" alt="Shy Guy">
+        <div class="card-body">
+          <h5 class="card-title">Shy Guy</h5>
+          <p class="card-text">Shy Guy stares out from behind his mask, his gaze revealing the hidden weaknesses of his
+            opponents.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Light</small>
+        </div>
+      </div>-->
     </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/diddy.png" alt="Diddy Kong">
-      <div class="card-body">
-        <h5 class="card-title">Diddy Kong</h5>
-        <p class="card-text">Diddy Kong is Donkey Kong's nephew and has appeared in two Mario Kart games so far.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Medium</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/wario.png" alt="Wario">
-      <div class="card-body">
-        <h5 class="card-title">Wario</h5>
-        <p class="card-text">Wario is a fictional character in Nintendo's Mario series who was originally designed as
-          an arch-rival of Mario and the protagonist of the Wario series of games.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Heavy</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/waluigi.png" alt="Waluigi">
-      <div class="card-body">
-        <h5 class="card-title">Waluigi</h5>
-        <p class="card-text">Waluigi is a fictional character in the Mario franchise. He is Wario's partner and
-          Luigi's
-          arch-rival.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Heavy</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/bowser.png" alt="Bowser">
-      <div class="card-body">
-        <h5 class="card-title">Bowser</h5>
-        <p class="card-text">Bowser or King Koopa is the leader and most powerful of the turtle-like Koopa race, and
-          has been the archenemy of Mario ever since his first appearance, in the game Super Mario Bros. He is the
-          main
-          antagonist of the series, his main goal being to kidnap Princess Peach to take control of the Mushroom
-          Kingdom.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Heavy</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/koopa.png" alt="Koopa">
-      <div class="card-body">
-        <h5 class="card-title">Koopa Troopa</h5>
-        <p class="card-text">Koopa Troopa is one of Bowser's allies who tries to stop Mario in his quest to save
-          Princess Peach. However, some Koopas aid Mario on his quest.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Light</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/lakitu.png" alt="Lakitu">
-      <div class="card-body">
-        <h5 class="card-title">Lakitu</h5>
-        <p class="card-text">Lakitu is a Koopa who floats in a cloud. That cloud is really the only thing that sets
-          him
-          apart from a normal Koopa Troopa.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Light</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/shy.png" alt="Shy Guy">
-      <div class="card-body">
-        <h5 class="card-title">Shy Guy</h5>
-        <p class="card-text">Shy Guy stares out from behind his mask, his gaze revealing the hidden weaknesses of his
-          opponents.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Light</small>
-      </div>
-    </div>
-  </div>
 
-  <div class="card-deck">
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/birdo.png" alt="Birdo">
-      <div class="card-body">
-        <h5 class="card-title">Birdo</h5>
-        <p class="card-text">Birdo is a pink, anthropomorphic creature who wears a red hairbow, and has a round mouth
-          that can fire eggs as projectiles. Birdo also wears a large diamond ring.</p>
+    <div class="card-deck flex-wrap">
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/birdo.png" alt="Birdo">
+        <div class="card-body">
+          <h5 class="card-title">Birdo</h5>
+          <p class="card-text">Birdo is a pink, anthropomorphic creature who wears a red hairbow, and has a round mouth
+            that can fire eggs as projectiles. Birdo also wears a large diamond ring.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Medium</small>
+        </div>
       </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Medium</small>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/iggy.png" alt="Iggy">
+        <div class="card-body">
+          <h5 class="card-title">Iggy Koopa</h5>
+          <p class="card-text">Iggy Koopa is a hyperactive, demented, and unpredictable Koopaling who wields the yellow
+            magic wand. He is named after Iggy Pop.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Medium</small>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/iggy.png" alt="Iggy">
-      <div class="card-body">
-        <h5 class="card-title">Iggy Koopa</h5>
-        <p class="card-text">Iggy Koopa is a hyperactive, demented, and unpredictable Koopaling who wields the yellow
-          magic wand. He is named after Iggy Pop.</p>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/larry.png" alt="Larry">
+        <div class="card-body">
+          <h5 class="card-title">Larry Koopa</h5>
+          <p class="card-text">Larry Koopa is the youngest Koopaling who is often seen at the forefront of the
+            Koopalings' antics, and he wields the orange magic wand. </p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Light</small>
+        </div>
       </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Medium</small>
+      <div class="card">
+        <img class="card-img-top racers" src="img/racers/lemmy.png" alt="Lemmy">
+        <div class="card-body">
+          <h5 class="card-title">Lemmy Koopa</h5>
+          <p class="card-text">Lemmy Koopa is depicted as a small, fun-loving child who wields the green magic wand,
+            and
+            has been shown capable of being serious when the situation calls for it. He is named after Lemmy Kilmister.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Light</small>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/larry.png" alt="Larry">
-      <div class="card-body">
-        <h5 class="card-title">Larry Koopa</h5>
-        <p class="card-text">Larry Koopa is the youngest Koopaling who is often seen at the forefront of the
-          Koopalings' antics, and he wields the orange magic wand. </p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Light</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/lemmy.png" alt="Lemmy">
-      <div class="card-body">
-        <h5 class="card-title">Lemmy Koopa</h5>
-        <p class="card-text">Lemmy Koopa is depicted as a small, fun-loving child who wields the green magic wand,
-          and
-          has been shown capable of being serious when the situation calls for it. He is named after Lemmy Kilmister.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Light</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top racers" src="img/racers/ludwig.png" alt="Ludwig">
-      <div class="card-body">
-        <h5 class="card-title">Ludwig von Koopa</h5>
-        <p class="card-text">Ludwig von Koopa is the eldest who possesses a magnificent intelligence most likely
-          superior to that of the other Koopalings, and wields the blue magic
-          wand.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Weight Class: Medium</small>
-      </div>
+      <!--<div class="card">
+        <img class="card-img-top racers" src="img/racers/ludwig.png" alt="Ludwig">
+        <div class="card-body">
+          <h5 class="card-title">Ludwig von Koopa</h5>
+          <p class="card-text">Ludwig von Koopa is the eldest who possesses a magnificent intelligence most likely
+            superior to that of the other Koopalings, and wields the blue magic
+            wand.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Weight Class: Medium</small>
+        </div>
     </div>
     <div class="card">
       <img class="card-img-top racers" src="img/racers/morton.png" alt="Morton">
@@ -297,20 +298,20 @@
       <div class="card-footer">
         <small class="text-muted">Weight Class: Light</small>
       </div>
+    </div>-->
     </div>
-  </div>
 
-  <hr class="break" style="border: 2px solid red;" />
+    <hr class="break" style="border: 2px solid red;" />
 
-  <div class="card-deck">
+    <div class="card-deck">
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
