--- a/history.html
+++ b/history.html
@@ -24,18 +24,43 @@
     </nav>
   </div>
 
-  <div class="history">
-    <h1>History Of Mario Kart</h1>
-    <p>When you think about, it really sounds like a stupid idea for a game.</p>
-    <p>I mean, what was Nintendo thinking? “Let’s just put all of the Mario characters in little karts and have them
-      race and throw banana peels at each other.” Um, OK? Is this a joke?</p>
-    <p>Well, the joke’s on us. Mario Kart has become one of Nintendo’s biggest franchises, and the gaming giant has
-      made sure to release a new one with every console it makes. With the upcoming Mario Kart 8 coming out on the Wii
-      U on May 30, we thought it would be fun to look back at the series’ history.</p>
+  <div class="whatever">
+    <div class="history">
+      <h1>History Of Mario Kart</h1>
+      <p>When you think about, it really sounds like a stupid idea for a game.</p>
+      <p>I mean, what was Nintendo thinking? “Let’s just put all of the Mario characters in little karts and have them
+        race and throw banana peels at each other.” Um, OK? Is this a joke?</p>
+      <p>Well, the joke’s on us. Mario Kart has become one of Nintendo’s biggest franchises, and the gaming giant has
+        made sure to release a new one with every console it makes. With the upcoming Mario Kart 8 coming out on the
+        Wii
+        U on May 30, we thought it would be fun to look back at the series’ history.</p>
+    </div>
+
+    <div> class="video-responsive"><iframe width="560" height="315" src="https://www.youtube.com/embed/69ogkfx1Tzc"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div class="history">
+      <p>It’s hard to believe that the kart-racing genre wasn’t always around, but it really got its start with Super
+        Mario Kart. The Super Nintendo classic enabled two players to race against each other as different characters
+        in
+        the Mario franchise on colorful courses. You could also fight your friend in Battle Mode, where each player had
+        to eliminate the other by using weapons.</p>
+      <p>The roster included Mario, Luigi, Yoshi, Princess Peach, Bowser, Toad, Koopa Troopa,&nbsp;and Donkey Kong Jr.</p>
+      <p>Super Mario Kart was one of the Super Nintendo’s most popular releases, and it helped create a new sub-genre
+        of
+        racing games. Instead of focusing entirely on skill, Mario Kart added items to the mix. The player could use
+        homing shells, banana peels, and invincibility stars to gain an advantage. Even if you were stuck in last
+        place,
+        there was always hope you’d get some good items and make a big comeback. Keeping true to Nintendo’s philosophy,
+        it was fun for everyone, and Super Mario Kart established one of the company’s most enduring series.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/eHKKARrt_7M" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+    </div>
+
   </div>
-  <div class="vintage"><img src="./img/vintage.jpg"></div>
-  <div> class="video-responsive"><iframe width="560" height="315" src="https://www.youtube.com/embed/69ogkfx1Tzc"
-      frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+
+  <footer class="footer">
+    <p>Copyright© Joel Samson 2018</p>
+  </footer>
 
 
 
