--- a/index.html
+++ b/index.html
@@ -57,9 +57,16 @@
     <div class="card">
       <img class="card-img-top" src="img/cheat.jpg" alt="Cheats">
       <div class="card-body">
-        <h5 class="card-title">Cheats</h5>
-        <p>Find out all the exclusive cheats for each Mario Kart game. Includes cheats never before
-          released.</p>
+        <h5 class="card-title">Store</h5>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Banana Item - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
+        <li><img src="./img/store/shell.jpg" </li> <p>Mario Kart Mocchi-Mocchi-Shell - $7.99</p>
       </div>
     </div>
     <div class="card">
