--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@
     </nav>
   </div>
 
-  <div class="card-deck">
+  <div class="card-deck  flex-wrap">
     <div class="card">
       <img class="card-img-top" src="img/games/one.jpg" alt="Super Mario Kart">
       <div class="card-body">
@@ -69,7 +69,7 @@
 
   <hr class="break" style="border: 2px solid red;" />
 
-  <div class="card-deck">
+  <div class="card-deck" flex-wrap>
     <div class="card">
       <img class="card-img-top" src="img/games/four.jpg" alt="Mario Kart: Double Dash">
       <div class="card-body">
@@ -119,7 +119,7 @@
 
   <hr class="break" style="border: 2px solid red;" />
 
-  <div class="card-deck">
+  <div class="card-deck" flex-wrap>
     <div class="card">
       <img class="card-img-top" src="img/games/seven.jpg" alt="Mario Kart 7">
       <div class="card-body">
