final final changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<a name="top"></a>
 
 <head>
   <meta charset="UTF-8">
@@ -123,6 +124,10 @@
     <p>There have been six Mario Kart games released for home consoles, three portable games, and four Namco
       co-developed arcade games, for a total of thirteen.</p>
   </article>
+  <footer class="footer">
+    <a href="#top" class="back">back to top</a>
+    <p>Copyright© Joel Samson 2018</p>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
