--- a/games.html
+++ b/games.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<a name="top"></a>
 
 <head>
   <meta charset="UTF-8">
@@ -166,6 +167,10 @@
   </div>
 
   <hr class="break" style="border: 2px solid red;" />
+  <footer class="footer">
+    <a href="#top" class="back">back to top</a>
+    <p>Copyright© Joel Samson 2018</p>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
