--- a/history.html
+++ b/history.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<a name="top"></a>
 
 <head>
   <meta charset="UTF-8">
@@ -34,10 +35,11 @@
         made sure to release a new one with every console it makes. With the upcoming Mario Kart 8 coming out on the
         Wii
         U on May 30, we thought it would be fun to look back at the series’ history.</p>
+      <div class="video-responsive"><iframe width="560" height="315" src="https://www.youtube.com/embed/69ogkfx1Tzc"
+          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
     </div>
 
-    <div> class="video-responsive"><iframe width="560" height="315" src="https://www.youtube.com/embed/69ogkfx1Tzc"
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+
     <div class="history">
       <p>It’s hard to believe that the kart-racing genre wasn’t always around, but it really got its start with Super
         Mario Kart. The Super Nintendo classic enabled two players to race against each other as different characters
@@ -52,13 +54,14 @@
         place,
         there was always hope you’d get some good items and make a big comeback. Keeping true to Nintendo’s philosophy,
         it was fun for everyone, and Super Mario Kart established one of the company’s most enduring series.</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/eHKKARrt_7M" frameborder="0" allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
+      <div class="video-responsive"><iframe width="560" height="315" src="https://www.youtube.com/embed/eHKKARrt_7M"
+          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
     </div>
 
   </div>
 
   <footer class="footer">
+    <a href="#top" class="back">back to top</a>
     <p>Copyright© Joel Samson 2018</p>
   </footer>
 
